--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
     <h2>선택자실습</h2>
     <ul>
         <li><a href="selector01.html" target="_blank">selector01</a></li>
-    </ul>
-
-    <ul>
         <li><a href="selector02.html" target="_blank">selector02</a></li>
     </ul>
+    <h2>디스플레이실습</h2>
+    <ul>
+        <li><a href="display01.html" target="_blank">display01</a></li>
+    </ul>
 
+    <h2>레이아웃실습</h2>
+    <ul>
+        <li><a href="layout01.html" target="_blank">layout01</a></li>
+    </ul>
 
 </body>
 
