--- a/layout01.html
+++ b/layout01.html
@@ -161,8 +161,8 @@
 
     <section class="sc02">
         <h2>Lorem ipsum dolor sit.</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio voluptates sequi qui atque cupiditate
-            doloribus est provident ipsam.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing
+            elit. Repellat quo, placeat dolores asperiores sit ullam numquam in quidem!</p>
         <div class="inner">
             <div class="box">01</div>
             <div class="box">02</div>
@@ -172,8 +172,8 @@
 
     <section class="sc03">
         <h2>Lorem ipsum dolor sit.</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione similique cupiditate eos, laboriosam
-            repudiandae deleniti neque rerum quidem.
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing
+            elit. Repellat quo, placeat dolores asperiores sit ullam numquam in quidem!
         </p>
         <div class="inner">
             <div class="box">01</div>
@@ -185,8 +185,8 @@
 
     <section class="sc04">
         <h2>Lorem ipsum dolor sit.</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolore fuga cumque, assumenda ad totam
-            placeat sed qui?
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing
+            elit. Repellat quo, placeat dolores asperiores sit ullam numquam in quidem!
         </p>
 
         <div class="inner">
@@ -200,8 +200,8 @@
 
     <section class="sc05">
         <h2>Lorem ipsum dolor sit.</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quas, modi sit ducimus sed ipsum inventore
-            ullam esse?
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing
+            elit. Repellat quo, placeat dolores asperiores sit ullam numquam in quidem!
         </p>
 
         <div class="inner">
